--- a/mobile/web/swiper/idangerous.swiper.css
+++ b/mobile/web/swiper/idangerous.swiper.css
@@ -94,7 +94,7 @@ sizes, pagination, etc.
 .swiper-container {
     /* Specify Swiper's Size: */
     width: 100%;
-    height: 48rem;
+    height: 100%;
     /*width:200px;
     height: 100px;*/
 }
