--- a/mobile/web/resources/css/form.css
+++ b/mobile/web/resources/css/form.css
@@ -378,7 +378,7 @@
 
 .uploadImgModalLookContent > span > img {
     width: 100%;
-    max-height: 100%;
+    max-height: 14rem;
 }
 
 .uploadImgModalLookSureBox {
