--- a/mobile/web/resources/css/form.css
+++ b/mobile/web/resources/css/form.css
@@ -145,7 +145,12 @@
 
 .swiper-wrapper > span > img {
     width: 10rem;
-    max-height: 14rem;
+    position: fixed;
+    top: 1rem;
+    left: 0;
+    max-height: -moz-calc(100% - 2rem);
+    max-height: -webkit-calc(100% - 2rem);
+    max-height: calc(100% - 2rem);
 }
 
 .selectModalBox {
@@ -378,7 +383,12 @@
 
 .uploadImgModalLookContent > span > img {
     width: 100%;
-    max-height: 14rem;
+    position: fixed;
+    top: 1rem;
+    left: 0;
+    max-height: -moz-calc(100% - 2rem);
+    max-height: -webkit-calc(100% - 2rem);
+    max-height: calc(100% - 2rem);
 }
 
 .uploadImgModalLookSureBox {
