--- a/mobile/web/resources/css/index.css
+++ b/mobile/web/resources/css/index.css
@@ -1,213 +1,260 @@
-*{
-	padding: 0;
-	margin: 0;
+body {
+    position: relative;
 }
-body{
-	font-family: "宋体";
+
+.banner {
+    width: 10rem;
+    height: 5.2rem;
 }
-/*head*/
-.header{
-	width: 100%;
-	height: 30rem;
-	background: url(https://ascasc.oss-cn-hangzhou.aliyuncs.com/20181026112346fh767k51w.jpg) no-repeat;
-	background-size: cover;
-	-webkit-background-size: cover;
-	-o-background-size: cover;
-	background-position: center center;
-	color: #fff;
+
+.banner img {
+    width: 10rem;
+    height: 5.2rem;
 }
-.header .ico_top{
-    height:7rem;
-    font-size: 3rem;
-    line-height: 8rem;
-    padding: 0 5rem 0 .9375rem;
-}
-.header .ico_top a{
-	color: #fff;
-	float: right;
-}
-.header .cont{
+
+.bannerIcon {
     position: absolute;
-    left: 8rem;
-    font-size: 2.2rem;
+    z-index: 999;
+    top: 0.2rem;
+    right: 0.08rem;
+    width: 1rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.66rem;
+    color: white;
+}
+
+.bannerInfo {
+    position: absolute;
+    z-index: 999;
+    top: 0.8rem;
+    left: 0.6rem;
+    width: 6rem;
+    color: white;
     font-family: "微软雅黑";
 }
-.header .cont .title_small{
-	width: 24rem;
-	height: 3rem;
-	line-height: 1rem;
-}
-.header .cont .title_text{
-	font:4.5rem/5rem "微软雅黑";
+
+.bannerInfo > .bannerTitle {
+    width: 6rem;
+    height: 0.6rem;
+    line-height: 0.6rem;
+    font-size: 0.32rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-/*search*/
-.search_box {
-	width: 80%;
-	height: 6rem;
-	line-height: 6rem;
-	border: none;
-	background-color: #fff;
-	border-radius: 3rem;
-	margin: 20rem auto 0 auto;
-	font-size: 2rem;
-	box-shadow: 0 .3125rem 2.25rem 0 rgba(0,0,0,.2);
-}
-.search_box i{
-	text-indent: 1.6rem;
-	color: #BDBDBD;
-}
-.search_box input{
-	display: inline-block;
-	line-height: 5rem;
-	border: none;
+.bannerInfo > .bannerDetail {
+    width: 6rem;
+    height: 1.6rem;
+    line-height: 0.8rem;
+    font-size: 0.6rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-/*nav*/
-.nav{
-	width:100%;
+.search {
+    position: absolute;
+    z-index: 999;
+    top: 4.8rem;
+    left: 1rem;
+    width: 8rem;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    font-size: 0.32rem;
+    color: #BDBDBD;
+    border-radius: 0.4rem;
+    padding: 0 0.2rem;
+    box-sizing: border-box;
+    box-shadow: 0 0.02rem 0.4rem 0 rgba(0, 0, 0, .2);
+    background: #ffffff;
 }
 
-.nav .nav_list{
-	margin: 8.125rem auto 0 auto;
-	width: 90%;
+.nav {
+    margin-top: 0.8rem;
+    width: 10rem;
+    height: 2rem;
+    padding: 0 0.4rem;
+    box-sizing: border-box;
 }
-.nav_list .box_col{
-	width: 20%;
-	height: 14rem;
-	float: left;
+
+.nav > div {
+    float: left;
+    display: table;
+    width: 1.84rem;
+    height: 2rem;
 }
-.box_col .ico{
-	width: 100%;
+
+.nav > div > span {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 0.26rem;
+    color: #101D37;
 }
-.box_col .ico img{
-	display: block;
-	width: 80%;
-	height: 8.87rem;
-	margin: 0 auto;
+
+.nav > div > span > img {
+    margin-bottom: 0.04rem;
+    width: 1.26rem;
+    height: 1.2rem;
 }
-.box_col .name{
-	font-size: 2.4rem;
-	margin-top: 0.6rem;
-	text-align: center;
-	font-family: "宋体";
-	color:#101D37;
+
+.toolsBox {
+    width: 10rem;
+    height: 2.8rem;
+    padding: 0 0.4rem;
+    box-sizing: border-box;
 }
-/*常用工具*/
-.tool{
-	width: 90%;
-	height: 16rem;
-	margin: 24rem auto 0 auto;
-	padding:3rem;
-}
-.mod_cont{
-	padding: 0;
-}
-.h3{
-    position: relative;
-    height: 6.87rem;
-    line-height: 6.87rem;
+
+.toolsBox > span {
+    width: 9.2rem;
+    display: block;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    font-size: 0.4rem;
     color: #333;
-    font-size: 3.5rem;
     font-family: "宋体";
     font-weight: 700;
 }
-.tool_list{
-	width: 20%;
-	height: 11rem;
-	float: left;
-	margin-bottom: 1rem;
-}
-.tool_list .lisTs img{
-	width: 54.43%;
-	height: 6rem;
-	display: block;
-	margin: 0 auto;
-}
-.tool_list .listName{
-	font-size: 2.4rem;
-	margin-top: 0.6rem;
-	text-align: center;
-	font-family: "宋体";
-	color:#101D37;
+
+.toolsBox > .tools {
+    width: 9.2rem;
+    height: 2rem;
 }
 
-/*推荐*/
-.recommend{
-	width: 90%;
-	height: 100%;
-	padding:3rem;
-	margin: 0 auto;
-}
-.reList{
-	float: right;
-	font-size: 2.2rem;
-    color: #9399A5;
-    font-family: "微软雅黑";
-    font-weight: 400;
-}
-.reList span{
-	padding-left: 2rem;
-}
-.reList .active{
-	color: #3072F6;
-}
-.recont{
-	width: 100%;
-	height: 16rem;
-	padding: 2rem 0;
-	border-bottom: .1rem solid #e4e6f0;
-}
-.recont:last-child{
-	border: none;
-}
-.recimg{
-	width: 20.75rem;
-	height: 15.375rem;
-	float: left;
+.toolsBox > .tools > div {
+    float: left;
+    display: table;
+    width: 1.84rem;
+    height: 2rem;
 }
 
-.recimg img{
-	width: 20.75rem;
-	height: 15.375rem;
-}
-.redadat{
-	width: 56%;
-	height: 16rem;
-	float: right;
-}
-.redadat .tit{
-    margin-bottom: 1rem;
-	line-height: 3.2rem;
-    overflow: hidden;
-	text-overflow:ellipsis;
-	white-space: nowrap;
-    font-size: 2.7rem;
-    color: #101d37;
-}
-.redadat .tit_txt{
-    margin-bottom: 1rem;
-    font-size: 2.1rem;
-    font-family: "微软雅黑";
-    color: #101d37;
-}
-.redadat .price{
-	font-size: 3rem;
-	color: #fa5741;
-	font-weight: 600;
-}
-.none_border{
-	border: none;
-}
-.viewMore{
-	width: 100%;
-	height: 9rem;
+.toolsBox > .tools > div > span {
+    display: table-cell;
+    vertical-align: middle;
     text-align: center;
-    line-height: 9rem;
-    background: rgba(48,114,246,.05);
-    font-size: 3rem;
+    font-size: 0.26rem;
+    color: #101D37;
 }
-.viewMore a{
-	color: #3072F6;
+
+.toolsBox > .tools > div > span > img {
+    margin-bottom: 0.04rem;
+    width: 1.26rem;
+    height: 1.2rem;
+}
+
+.recommend {
+    width: 10rem;
+    box-sizing: border-box;
+    padding: 0 0.4rem;
+}
+
+.recommend > .titleBox {
+    width: 9.2rem;
+    height: 0.8rem;
+    font-family: "宋体";
+}
+
+.recommend > .titleBox > .title {
+    float: left;
+    width: 2.4rem;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    color: #333;
+    font-size: 0.4rem;
+    font-weight: 700;
+}
+
+.recommend > .titleBox > .type {
+    float: right;
+    height: 0.8rem;
+    width: 6.8rem;
+    padding-top: 0.252rem;
+    box-sizing: border-box;
+}
+
+.recommend > .titleBox > .type > span {
+    display: block;
+    float: right;
+    width: 1.2rem;
+    height: 0.4rem;
+    line-height: 0.4rem;
+    color: #9399A5;
+    font-size: 0.26rem;
+    text-align: center;
+}
+
+.recommend > .titleBox > .type > .active {
+    color: #3072F6;
+}
+
+.recommend > .cont {
+    width: 9.2rem;
+}
+
+.recommend > .cont > .one {
+    width: 9.2rem;
+    height: 2.8rem;
+    border-bottom: 1px solid #e4e6f0;
+    padding: 0.2rem 0;
+    box-sizing: border-box;
+}
+
+.recommend > .cont > .one:last-child {
+    border-bottom: 0;
+}
+
+.recommend > .cont > .one > img {
+    float: left;
+    width: 3.2rem;
+    height: 2.4rem;
+}
+
+.recommend > .cont > .one > .oneInfo {
+    float: right;
+    width: 5.2rem;
+    height: 2.4rem;
+}
+
+.recommend > .cont > .one > .oneInfo > .title {
+    height: 0.7rem;
+    line-height: 0.7rem;
+    font-size: 0.4rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.recommend > .cont > .one > .oneInfo > .info {
+    height: 0.5rem;
+    line-height: 0.5rem;
+    font-size: 0.3rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.recommend > .cont > .one > .oneInfo > .price {
+    height: 0.7rem;
+    line-height: 0.7rem;
+    color: #fa5741;
+    font-size: 0.4rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.recommend > .more {
+    margin-bottom: 0.2rem;
+    width: 9.2rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    border-radius: 0.06rem;
+    color: #101D37;
+    background: rgba(48, 114, 246, 0.05);
+    font-size: 0.34rem;
 }
 
