--- a/platform/web/resources/css/index.css
+++ b/platform/web/resources/css/index.css
@@ -8,7 +8,7 @@
     width: 100%;
     height: 566px;
     padding-top: 20px;
-    background: #ccc url(https://ascasc.oss-cn-hangzhou.aliyuncs.com/20181026112346fh767k51w.jpg) no-repeat;
+    background: #ccc url('../images/index1.jpg') no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
